feat: CRUD User & Update Docs
